Update index.html for Cambridge Public Education and Welfare Trust branding
- Changed the title to "Cambridge Public Education and Welfare Trust".
- Updated favicon to reflect new branding.
- Modified header background and text color for better visibility.
- Updated contact information with new phone number and email.
- Simplified social media links and adjusted their color.
- Changed logo image and added descriptive text below the logo.
- Revised navigation menu items for clarity and added links for Login and Register.
- Updated the donation button text and styling for better emphasis.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Charifit</title>
+    <title>Cambridge Public Education and Welfare Trust</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="cpeduw-Photoroom.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -34,33 +34,24 @@
 
 
     <!-- header-start -->
-    <header>
-        <div class="header-area ">
+    <header style="background: linear-gradient(90deg, #1a237e 60%, #ffd600 100%); color: #fff;">
+        <div class="header-area">
             <div class="header-top_area">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-xl-6 col-md-12 col-lg-8">
                             <div class="short_contact_list">
                                 <ul>
-                                    <li><a href="#"> <i class="fa fa-phone"></i> +1 (454) 556-5656</a></li>
-                                    <li><a href="#"> <i class="fa fa-envelope"></i>Yourmail@gmail.com</a></li>
+                                    <li><a href="#" style="color:#fff"> <i class="fa fa-phone"></i> +91 98765 43210</a></li>
+                                    <li><a href="#" style="color:#fff"> <i class="fa fa-envelope"></i>info@cambridgepublictrust.org</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-xl-6 col-md-6 col-lg-4">
                             <div class="social_media_links d-none d-lg-block">
-                                <a href="#">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fa fa-pinterest-p"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fa fa-linkedin"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
+                                <a href="#" style="color:#ffd600"><i class="fa fa-facebook"></i></a>
+                                <a href="#" style="color:#ffd600"><i class="fa fa-linkedin"></i></a>
+                                <a href="#" style="color:#ffd600"><i class="fa fa-twitter"></i></a>
                             </div>
                         </div>
                     </div>
@@ -72,34 +63,32 @@
                         <div class="col-xl-3 col-lg-3">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="cpeduw-Photoroom.png" alt="Cambridge Public Education and Welfare Trust" style="height:70px;">
                                 </a>
+                                <span style="font-size:1.2em;font-weight:bold;color:#1a237e;display:block;margin-top:8px;">Cambridge Public Education and Welfare Trust</span>
+                                <span style="font-size:1em;color:#ffd600;display:block;">Empowering Education, Enabling Futures</span>
                             </div>
                         </div>
                         <div class="col-xl-9 col-lg-9">
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a href="About.html">About</a></li>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="About.html">About Us</a></li>
+                                        <li><a href="#">Programs <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="elements.html">elements</a></li>
-                                                <li><a href="Cause.html">Cause</a></li>
+                                                <li><a href="Cause.html">Our Causes</a></li>
+                                                <li><a href="blog.html">Blog</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="login.php">Login</a></li>
+                                        <li><a href="register.php">Register</a></li>
                                     </ul>
                                 </nav>
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a data-scroll-nav='1' href="#">Make a Donate</a>
+                                        <a data-scroll-nav='1' href="#donate" style="background:#ffd600;color:#1a237e;font-weight:bold;border-radius:30px;padding:10px 30px;box-shadow:0 2px 8px rgba(26,35,126,0.1);">Donate Now</a>
                                     </div>
                                 </div>
                             </div>
